--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://anandbhawna40:axQ0sf8xBolRTdDN@cluster0.5satu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-PORT=3000
+PORT=https://jobportal-iwf1.onrender.com
 CLOUD_NAME=dxrnm6gzk
 API_KEY=759524169442318
 API_SECRET=es7R7My7DypPtHuyGBYu2t_nIzA
